--- a/token-lending/ts-experiments/package.json
+++ b/token-lending/ts-experiments/package.json
@@ -13,5 +13,10 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-lending": "^0.3.6",
+    "@solana/web3.js": "^1.30.2"
   }
 }
